--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="hero">
 		<div class="form-box">
-			<img src="images/logo.jpeg"  class="avatar">
+			<img src="logo.jpeg"  class="avatar">
 			<h1>Login Here</h1>
 			<form>
 				<p>Username</p>
