--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<input type="name" name="" placeholder="Enter Username">
 				<p>Password</p>
 				<input type="password" name="" placeholder="Enter password">
-				<a href="file:///C:/Users/nisch/OneDrive/Desktop/karate%20images/index.html">
+				<a href="https://jukaidomma.000webhostapp.com/">
 				<input type="submit" name="" value="login"></a><br>
 				<a href="#">Lost your Password</a><br>
 				<a href="#">Don't have an account?</a>
